--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
     box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
 }
 
-/* CSS CAPÇALERA */
+/* CSS CAPï¿½ALERA */
 #contenidor {
     display: flex;
     flex-direction: row;
@@ -50,6 +50,7 @@
     margin-right: 10px;
 }
 
+
 /* CSS NUMCLICKS */
 #numclicks {
     width: 100px;
@@ -62,6 +63,8 @@
     margin-bottom: 5px;
     padding: 10px;
     border-radius: 5px;
+    display: flex;
+    align-items: center;
     justify-content: center;
 }
 
